# glslshader

glslShader/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  acinclude.m4  aclocal.m4  config.h.in  configure  configure.in  glslPlatform.h  glslShader.c  glslShader.h  glslShader.pc.in  glslTypes.h  glslUtil.c  glslUtil.h  mkinstalldirs
glslShader/doc/: Makefile.am  config.doxygen
